@@ -46,12 +46,13 @@ logging.info("Starting Datastore %s" % (repo_dir))
 mainloop = gobject.MainLoop()
 
 def handle_disconnect():
-    global connected
-    connected = False
+    global mainloop
+    mainloop.quit()
+    logging.debug("Datastore disconnected from the bus.")
 
 def handle_shutdown(signum, frame):
-    global connected
-    connected = False
+    global mainloop
+    mainloop.quit()
     raise SystemExit("Shutting down on signal %s" % signum)
 
 bus.set_exit_on_disconnect(False)
@@ -63,29 +64,17 @@ signal.signal(signal.SIGHUP, handle_shutdown)
 signal.signal(signal.SIGTERM, handle_shutdown)
 
 def main():
-    # XXX: The context/sleep loop is a work around for what seems
-    # to be the mainloop blocking in such a way that the indexer
-    # thread doesn't run until new dbus messages come in...
-    # I intend to track this down post trial-2
-    # really awful
-    import time
-    context = mainloop.get_context()
-
     if '-m' in sys.argv:
         # mount automatically for local testing
         ds.mount(repo_dir)
         ds.complete_indexing()
         
     try:
-        while connected:
-            context.iteration(False)
-            time.sleep(0.0025)
-
+        mainloop.run()
     except KeyboardInterrupt:
         logging.info("DataStore shutdown by user")
     except:
-        logging.debug("Datastore shutdown with error",
-                      exc_info=sys.exc_info())
+        logging.error("Datastore shutdown with error", exc_info=sys.exc_info())
      
 main()
 
